Fix Steam overriding scrollbar buttons (glyphs still need light mode/colorization support). Use scrollbar button border trick to act as a margin so content that scrolls under Acrylic headers does not cover any functional part of the scrollbar (see #91).

--- a/config/general/scrollbars/steam.css
+++ b/config/general/scrollbars/steam.css
@@ -1,6 +1,7 @@
 /* STEAM */
 :root {
   --option-scrollbar-width: 14px;
+  --option-scrollbar-unfocused-button-size: 0px;
   --option-scrollbar-unfocused-inner-spacing: 4px;
   --option-scrollbar-unfocused-outer-spacing: 4px;
   --option-scrollbar-unfocused-end-spacing: 4px;
@@ -10,6 +11,7 @@
   --option-scrollbar-unfocused-foreground: var(--zehn-color-scrollbar-thumb-focused);
   --option-scrollbar-unfocused-foreground-hover: var(--zehn-color-scrollbar-thumb-focused-hover);
   --option-scrollbar-unfocused-foreground-active: var(--zehn-color-scrollbar-thumb-focused-active);
+  --option-scrollbar-focused-button-size: 0px;
   --option-scrollbar-focused-inner-spacing: 4px;
   --option-scrollbar-focused-outer-spacing: 4px;
   --option-scrollbar-focused-end-spacing: 4px;
