--- a/config/general/scrollbars/windows.css
+++ b/config/general/scrollbars/windows.css
@@ -1,6 +1,7 @@
 /* WINDOWS */
 :root {
   --option-scrollbar-width: 16px;
+  --option-scrollbar-unfocused-button-size: 0px;
   --option-scrollbar-unfocused-inner-spacing: 12px;
   --option-scrollbar-unfocused-outer-spacing: 2px;
   --option-scrollbar-unfocused-end-spacing: 2px;
@@ -10,6 +11,7 @@
   --option-scrollbar-unfocused-foreground: var(--zehn-color-scrollbar-thumb-unfocused);
   --option-scrollbar-unfocused-foreground-hover: var(--zehn-color-scrollbar-thumb-unfocused-hover);
   --option-scrollbar-unfocused-foreground-active: var(--zehn-color-scrollbar-thumb-unfocused-active);
+  --option-scrollbar-focused-button-size: 16px;
   --option-scrollbar-focused-inner-spacing: 0px;
   --option-scrollbar-focused-outer-spacing: 0px;
   --option-scrollbar-focused-end-spacing: 0px;
