--- a/css/chat.css
+++ b/css/chat.css
@@ -144,14 +144,14 @@ html.web_chat_frame body {
 .friendCollapseButton {
   transition: none !important;
   background-color: var(--zehn-color-button-app-background) !important;
-}
 
-.friendCollapseButton:hover {
-  background-color: var(--zehn-color-button-app-background-hover) !important;
-}
+  &:hover {
+    background-color: var(--zehn-color-button-app-background-hover) !important;
+  }
 
-.friendCollapseButton:active {
-  background-color: var(--zehn-color-button-app-background-active) !important;
+  &:active {
+    background-color: var(--zehn-color-button-app-background-active) !important;
+  }
 }
 
 body:not(.WindowFocus) .friendCollapseButton .SVGIcon_DoubleArrow {
@@ -2985,10 +2985,8 @@ div:hover>.BBCodeCollapseControl {
   margin: 0 !important;
   width: 48px !important;
   height: 48px !important;
-}
 
-.RVIs84dAE6wHcjH9tkinc .SVGIcon_Submit * {
-  display: none !important;
+  * { display: none !important; }
 }
 
 .RVIs84dAE6wHcjH9tkinc:not(.Aupswi7-c-w3XwNO5cp2i):not(._3zOBeq5W4cNK3lRz_7aroW) {
@@ -4095,35 +4093,33 @@ div:hover>.BBCodeCollapseControl {
   height: 32px !important;
   width: 48px !important;
   background-color: var(--zehn-color-button-app-background) !important;
-}
 
-.VoiceRoomChatTitle .MinimizeTextChat:hover {
-  background-color: var(--zehn-color-close-hover) !important;
-}
+  svg {
+    background-color: var(--zehn-color-icon-primary) !important;
+    mask-repeat: no-repeat !important;
+    mask-position: center !important;
+    mask-size: var(--zehn-size-icon-md) !important;
+    -webkit-mask-image: var(--zehn-icon-window-close) !important;
+    fill: transparent !important;
 
-.VoiceRoomChatTitle .MinimizeTextChat:active {
-  background-color: var(--zehn-color-close-active) !important;
-}
+    * { display: none !important; }
+  }
 
-.VoiceRoomChatTitle .MinimizeTextChat svg {
-  background-color: var(--zehn-color-icon-primary) !important;
-  mask-repeat: no-repeat !important;
-  mask-position: center !important;
-  mask-size: var(--zehn-size-icon-md) !important;
-  -webkit-mask-image: var(--zehn-icon-window-close) !important;
-  fill: transparent !important;
-}
+  &:hover {
+    background-color: var(--zehn-color-close-hover) !important;
 
-.VoiceRoomChatTitle .MinimizeTextChat:hover svg {
-  background-color: var(--zehn-color-control-light) !important;
-}
+    svg {
+      background-color: var(--zehn-color-control-light) !important;
+    }
+  }
 
-.VoiceRoomChatTitle .MinimizeTextChat:active svg {
-  background-color: var(--zehn-color-control-dark) !important;
-}
+  &:active {
+    background-color: var(--zehn-color-close-active) !important;
 
-.VoiceRoomChatTitle .MinimizeTextChat line {
-  stroke: transparent !important;
+    svg {
+      background-color: var(--zehn-color-control-dark) !important;
+    }
+  }
 }
 
 .VoiceChatTextChannelDesc {
