--- a/css/friends.css
+++ b/css/friends.css
@@ -133,8 +133,6 @@ body:not(.WindowFocus) .titleBarContainer .ContextMenuButton {
 /* FRIENDS */
 .FriendsListContent {
   margin: 0 !important;
-  overflow-y: auto !important;
-  /* SCROLL */
   height: fit-content !important;
 }
 
@@ -372,26 +370,20 @@ body:not(.WindowFocus) .titleBarContainer .ContextMenuButton {
   filter: none !important;
   height: 32px !important;
   width: 32px !important;
-}
 
-.friendlist .ContextMenuButton .SVGIcon_DownArrowContextMenu * {
-  fill: transparent !important;
+  * { display: none !important; }
 }
 
 .currentUserContainer .ContextMenuButton {
   background-color: var(--zehn-color-list-background) !important;
-}
 
-.currentUserContainer .ContextMenuButton:hover {
-  background-color: var(--zehn-color-list-background-hover) !important;
-}
+  &:hover {
+    background-color: var(--zehn-color-list-background-hover) !important;
+  }
 
-.currentUserContainer .ContextMenuButton:focus {
-  background-color: var(--zehn-color-list-background-hover) !important;
-}
-
-.currentUserContainer .ContextMenuButton:active {
-  background-color: var(--zehn-color-list-background-active) !important;
+  &:active {
+    background-color: var(--zehn-color-list-background-active) !important;
+  }
 }
 
 .FriendsListContent .ContextMenuButton,
@@ -657,10 +649,8 @@ body.in_global_drag .quickAccessFriends.emptyQuickAccess {
   mask-position: center !important;
   mask-size: var(--zehn-size-icon-md) !important;
   -webkit-mask-image: var(--zehn-icon-controller-split) !important;
-}
 
-._14S4rlGAAqfqW6lMKYB2GM ._1tN7mH20YhTaXLqtoW2hR- ._3UDCWUbI0_05r9ATmvC2HD * {
-  display: none !important;
+  * { display: none !important; }
 }
 
 /* REMOTE PLAY TOGETHER INFO */
