--- a/css/popup.css
+++ b/css/popup.css
@@ -2882,11 +2882,16 @@ form:has(.zhaKeChn9HPNSMtk0ami_) {
   line-height: 22px !important;
 }
 
+._3v2Gg_GCpLHpHQDLFQ7cvI.hYVp3sXyS0uYfJnzVoK-m ._13282V5ayJpcjQcM2DtB-z {
+  margin-block: var(--zehn-size-spacing-md) !important;
+}
+
 ._3v2Gg_GCpLHpHQDLFQ7cvI.hYVp3sXyS0uYfJnzVoK-m ._3f3VJUtyLXUf_JDFE-BaQ6 {
   border-radius: var(--zehn-size-radius-square) !important;
   border: unset !important;
   background: transparent !important;
   gap: var(--zehn-size-spacing-md) !important;
+  margin: 0 calc(-1 * var(--zehn-size-spacing-md)) !important;
 }
 
 ._3v2Gg_GCpLHpHQDLFQ7cvI ._3f3VJUtyLXUf_JDFE-BaQ6 {
