--- a/css/variables.css
+++ b/css/variables.css
@@ -1378,19 +1378,21 @@
   --zehn-mask-avatar-roundness: var(--option-mask-avatar-roundness, 50%);
 
   --zehn-scrollbar-width: var(--option-scrollbar-width, 0px);
-  --zehn-scrollbar-unfocused-inner-spacing: var(--option-scrollbar-unfocused-inner-spacing, 12px);
-  --zehn-scrollbar-unfocused-outer-spacing: var(--option-scrollbar-unfocused-outer-spacing, 2px);
-  --zehn-scrollbar-unfocused-end-spacing: var(--option-scrollbar-unfocused-end-spacing, 16px);
-  --zehn-scrollbar-unfocused-thumb-width: var(--option-scrollbar-unfocused-thumb-width, 2px);
+  --zehn-scrollbar-unfocused-button-size: var(--option-scrollbar-unfocused-button-size, 0px);
+  --zehn-scrollbar-unfocused-inner-spacing: var(--option-scrollbar-unfocused-inner-spacing, 0px);
+  --zehn-scrollbar-unfocused-outer-spacing: var(--option-scrollbar-unfocused-outer-spacing, 0px);
+  --zehn-scrollbar-unfocused-end-spacing: var(--option-scrollbar-unfocused-end-spacing, 0px);
+  --zehn-scrollbar-unfocused-thumb-width: var(--option-scrollbar-unfocused-thumb-width, 0px);
   --zehn-scrollbar-unfocused-thumb-radius: var(--option-scrollbar-unfocused-thumb-radius, 0px);
   --zehn-scrollbar-unfocused-background: var(--option-scrollbar-unfocused-background, var(--zehn-color-scrollbar-unfocused));
   --zehn-scrollbar-unfocused-foreground: var(--option-scrollbar-unfocused-foreground, var(--zehn-color-scrollbar-thumb-unfocused));
   --zehn-scrollbar-unfocused-foreground-hover: var(--option-scrollbar-unfocused-foreground-hover, var(--zehn-color-scrollbar-thumb-unfocused-hover));
   --zehn-scrollbar-unfocused-foreground-active: var(--option-scrollbar-unfocused-foreground-active, var(--zehn-color-scrollbar-thumb-unfocused-active));
+  --zehn-scrollbar-focused-button-size: var(--option-scrollbar-focused-button-size, 0px);
   --zehn-scrollbar-focused-inner-spacing: var(--option-scrollbar-focused-inner-spacing, 0px);
   --zehn-scrollbar-focused-outer-spacing: var(--option-scrollbar-focused-outer-spacing, 0px);
   --zehn-scrollbar-focused-end-spacing: var(--option-scrollbar-focused-end-spacing, 0px);
-  --zehn-scrollbar-focused-thumb-width: var(--option-scrollbar-focused-thumb-width, 16px);
+  --zehn-scrollbar-focused-thumb-width: var(--option-scrollbar-focused-thumb-width, 0px);
   --zehn-scrollbar-focused-thumb-radius: var(--option-scrollbar-focused-thumb-radius, 0px);
   --zehn-scrollbar-focused-background: var(--option-scrollbar-focused-background, var(--zehn-color-scrollbar-focused));
   --zehn-scrollbar-focused-foreground: var(--option-scrollbar-focused-foreground, var(--zehn-color-scrollbar-thumb-focused));
@@ -1785,7 +1787,7 @@
   --zehn-size-separator-margin: 4px;
 
   /* DOWNLOADS */
-  --zehn-size-downloads-panel: 200px;
+  --zehn-size-downloads-height: 200px;
 
   /* SETTINGS */
   --zehn-size-settings-entry: 32px;
